cmake_minimum_required(VERSION 3.6)
project(thesis_github)
link_directories(/home/edaravig/fplll-v5/lib/)
include_directories(/home/edaravig/fplll-v5/include/)
set(PROJECT_LINK_LIBS libfplll.so libgmp.so libmpfr.so libqd.so)
set(SOURCE_FILES main.cpp Parameters.cpp Parameters.h initMatrix.cpp initMatrix.h StopWatch.h execution.cpp)
add_executable(thesis_github ${SOURCE_FILES})
target_link_libraries(thesis_github ${PROJECT_LINK_LIBS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lgmp -lfplll -lqd -lmpfr")